--- a/placement/.vscode/settings.json
+++ b/placement/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "spider/bin/python3.6"
+    "python.pythonPath": "/home/vipulgupta2048/.virtualenvs/quotes/bin/python"
 }
